<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <RelativeLayout
            android:id="@+id/relInfo"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:background="@android:color/transparent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/info"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
        
        <RelativeLayout
            android:id="@+id/relImageTransparency"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relInfo"
            android:background="#00FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value00FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency2"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency"
            android:background="#11FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value11FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency3"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency2"
            android:background="#22FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value22FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency4"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency3"
            android:background="#33FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value33FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency5"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency4"
            android:background="#44FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value44FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency6"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency5"
            android:background="#55FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value55FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency7"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency6"
            android:background="#66FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value66FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency8"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency7"
            android:background="#77FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value77FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relImageTransparency9"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/relImageTransparency8"
            android:background="#88FFFFFF" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/value88FFFFFF"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>
</ScrollView>